<resources>
    <string name="app_name">zAIba</string>
    <string name="vnosno_polje">Napišite sporočilo:</string>
    <string name="gumb_poslji">Pošlji</string>
    <string name="izpis">Tukaj se bo prikazalo sporočilo</string>
    <string name="predtekst">"Sporocilo se glasi: "</string>
    <string name="logo_opis">Logo z žabo za naslov</string>
    <string name="overview_naslov">Overview</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices</string>
    <string name="frog_fact_of_the_day">💡Frog fact of the day</string>
    <string name="locations_home_naslov">Locations</string>
    <string name="location_3">Location_3</string>
    <string name="city_3">City_3</string>
    <string name="icon_description">Icon of a city, used for a location card on homepage</string>
    <string name="location_2">Location_2</string>
    <string name="city_2">City_2</string>
    <string name="location_1">Location_1</string>
    <string name="city_1">City_1</string>
    <string name="location_4">Location_4</string>
    <string name="city_4">City_4</string>
    <string name="frog_traffic_home_title">Frog traffic for the last 24 hours</string>
    <string name="frog_traffic_n_krastaca">🐾 Navadna krastača</string>
    <string name="frog_traffic_n_krastaca_st">1291</string>
    <string name="frog_traffic_z_krastaca">🐾 Zelena krastača</string>
    <string name="frog_traffic_z_krastaca_st">749</string>
    <string name="frog_traffic_z_rega">🐾 Zelena rega</string>
    <string name="frog_traffic_z_rega_st">271</string>
    <string name="frog_traffic_sekulja">🐾 Sekulja</string>
    <string name="frog_traffic_sekulja_st">432</string>
    <string name="home_icon_menu_bar">Icon for the menu bar, representing the button for the homepage</string>
    <string name="info_icon_menu_bar">Icon for the menu bar, representing the button for the info page</string>
    <string name="settings_icon_menu_bar">Icon for the menu bar, representing the button for settings</string>
    <string name="articles_home_naslov">Articles</string>
    <string name="articles_proxy_title_1">Nova eksotična vrsta žabe v Južni Ameriki</string>
    <string name="articles_24ur_com">24ur.com</string>
    <string name="articles_proxy_title_2">Posodobljena navodila za žabje akcije</string>
    <string name="articles_pomagajmo_zabicam_si">pomagajmo-žabicam.si</string>
    <string name="confidence_score">🌟 Confidence score</string>
    <string name="most_active_hour">21:00</string>
    <string name="loudest_frog">🐸 Loudest frog</string>
    <string name="zelena_rega">Zelena rega</string>
    <string name="location_interesting_stats">Interesting stats</string>
    <string name="monday">Mon</string>
    <string name="sunday">Sun</string>
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tue</string>
    <string name="today">Today</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="sekulja">Sekulja</string>
    <string name="navadna_krastaca">Navadna krastača</string>
    <string name="zelena_krastaca">Zel. krastača</string>
    <string name="location_frog_calls_detected">Frog calls detected: 256</string>
    <string name="location_most_frog_of_species">🐸  Most species</string>
    <string name="location_loudest_frog">Loudest frog</string>
    <string name="location_most_active_hour">⚡️  Most active hour</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="frogs_absorb_water_through_their_skin">Frogs absorb water through their skin!</string>
    <string name="fact_1">Navadna zelena rega (Hyla arborea), ki jo najdemo v Sloveniji, je znana po svojih izjemnih plezalnih sposobnostih zaradi lepljivih blazinic na prstih. Kljub svoji majhnosti (3–5 cm) ima presenetljivo glasno oglašanje, ki ga v obdobju parjenja pogosto slišimo iz grmovja in dreves v bližini vodnih teles.</string>
    <string name="updated_15_min_ago">updated 15 min ago</string>
    <string name="procenti_3">3%</string>
    <string name="dvojka">2</string>
    <string name="_0_00">0:00</string>
    <string name="_3_08">3:08</string>
    <string name="back_button_desc">back \nbutton</string>
    <string name="play_icon_desc">Vector Play arrow icon</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="frogs">Frogs</string>
    <string name="description">Description</string>
    <string name="est_time_0_minutes">Est. time: 0 minutes</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="settings_volume_control">Volume Control</string>
    <string name="settings_naslov">Settings</string>
    <string name="sound">Sound</string>
    <string name="sound_on">Sound On</string>
    <string name="pin">Pin</string>
    <string name="nothing_saved">Nothing is saved yet. Click the Save icon on the frog card to save your favourite frog.</string>
</resources>