<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <!-- Pin in the top right -->
        <ImageView
            android:id="@+id/pin_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/pin"
            android:contentDescription="@string/pin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- City text in bottom left -->
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/archivo_bold"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@id/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <!-- Location text below city -->
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_1"
            android:textSize="16sp"
            android:fontFamily="@font/inter_thin"
            android:textColor="@android:color/white"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
